configure: link with libpsx

This is needed for libcap to work with multi-threaded apps.
Unfortunately it doesn't work:
https://bugzilla.kernel.org/show_bug.cgi?id=219168